--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "pygame (>=2.6.1,<3.0.0)"
+    "pygame (>=2.6.1,<3.0.0)",
+    "pillow (>=12.1.0,<13.0.0)"
 ]
 
 
